--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
                   pytest-${{ env.PY }}
 
             - name: Install dependencies
-              run: pip install pytest
+              run: pip install -r requirements.txt
 
             - name: Run tests
               run: pytest --color=yes -v
